WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310957
Fix use-after-move in HTMLDocumentParser::insert(SegmentedString&&)
https://bugs.webkit.org/show_bug.cgi?id=310957
Summary
Fix use-after-move in HTMLDocumentParser::insert(SegmentedString&&)
Chris Dumez
Reported
2026-03-27 23:55:32 PDT
Fix use-after-move in HTMLDocumentParser::insert(SegmentedString&&).
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-28 00:04:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61554
EWS
Comment 2
2026-03-28 05:05:34 PDT
Committed
310151@main
(dd0784ac3372): <
https://commits.webkit.org/310151@main
> Reviewed commits have been landed. Closing PR #61554 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-28 05:06:13 PDT
<
rdar://problem/173581095
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug