Fix use-after-move in HTMLDocumentParser::insert(SegmentedString&&) https://bugs.webkit.org/show_bug.cgi?id=310957

Reviewed by Anne van Kesteren.

This does not change behavior at the moment but the code was very
fragile.

* Source/WebCore/html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::insert):
* Source/WebCore/html/parser/HTMLInputStream.h:
(WebCore::HTMLInputStream::insertAtCurrentInsertionPoint):

Canonical link: https://commits.webkit.org/310151@main